# django-study

./: .gitignore  README.md  pythonBoard.md  requirements.txt
03_HelloDRF/: db.sqlite3
03_HelloDRF/example/: urls.py  (+3 more)
05_DRFTodo/: db.sqlite3
airbnb-clone-backend/: README.md  db.sqlite3  dump.json  id  pyproject.toml  test.py
airbnb-clone-backend-login/: .env  db.sqlite3  pyproject.toml
airbnb-clone-puredjango/: .gitignore  Pipfile
airbnb-clone-puredjango-login/: Pipfile
flask-study/in-flask-backend/: app.py  create_board_db.py  create_db.py  create_test_tables_data.py  pyproject.toml  test.py
flask-study/webscraper/: file.py  main.py  pyproject.toml  python.csv
flask-study/webscraper/extractors/: indeed.py  wwr.py
inse-django/: db.sqlite3  model.txt  pyproject.toml
inse-django/common/: admin.py  models.py
inse-django/config/: __init__.py  settings.py  urls.py
inse-django/feed/: admin.py  models.py  urls.py  views.py
inse-django/feed/migrations/: 0001_initial.py  0002_feed_user_id.py  0002_initial.py  0003_alter_feed_content_alter_feed_img.py  0003_feed_created_feed_updated.py  0004_alter_feed_img.py
inse-django/feed/templates/: feeds.html
inse-django/reviews/: admin.py  models.py  urls.py  views.py
inse-django/reviews/migrations/: 0001_initial.py  0002_initial.py  0002_review_created_review_updated.py  0002_review_reply_alter_review_content.py
inse-django/users/: admin.py  models.py  urls.py  views.py
inse-django/users/migrations/: 0001_initial.py  0002_user_gender_user_is_business_user_nickname_and_more.py
lytblog-django/: db.sqlite3  pyproject.toml
lytblog-django/blog/: models.py  urls.py  views.py
lytblog-django/blog/migrations/: 0001_initial.py
lytblog-django/blog/templates/blog/: post_all.html  post_archive.html  post_archive_year.html  post_detail.html
lytblog-django/bookmark/: urls.py
lytblog-django/mysite/: settings.py  urls.py
lytbookmark-django/: db.sqlite3  pyproject.toml
lytbookmark-django/bookmark/migrations/: 0001_initial.py
lytbookmark-django/bookmark/templates/bookmark/: bookmark_detail.html  bookmark_list.html
lytbookmark-django/mysite/: settings.py  urls.py
movie-api/: actors.json  db.sqlite3  manage.py  movie_in_actors.json  pyproject.toml
movie-api/http_request/: actors.http  movies.http
movie-api/movie_api/: asgi.py  settings.py  urls.py  wsgi.py
movie-api/movies/: models.py  serializers.py  urls.py  views.py
movie-api/movies/migrations/: 0001_initial.py  0002_actor.py  0003_review.py  0004_alter_review_movie.py
mydjango01/: db.sqlite3  requirements.txt
oz-backend-django/: db.sqlite3  pyproject.toml
oz-backend-django/common/: models.py
oz-backend-django/config/: settings.py  urls.py
oz-backend-django/feeds/: admin.py  models.py  serializers.py  urls.py  views.py
oz-backend-django/feeds/migrations/: 0001_initial.py
oz-backend-django/feeds/templates/: feed.html  feeds.html
oz-backend-django/medias/: admin.py  models.py
oz-backend-django/medias/migrations/: 0001_initial.py
oz-backend-django/reviews/: admin.py  models.py  serializers.py  tests.py
oz-backend-django/reviews/migrations/: 0001_initial.py  0002_review_created_review_feed_review_reply_and_more.py
oz-backend-django/users/: admin.py  models.py  serializers.py  urls.py  views.py
oz-backend-django/users/migrations/: 0001_initial.py  0002_user_is_business_user_name_alter_user_first_name_and_more.py  0003_user_gender.py  0004_sns.py
shrinker/: db.sqlite3  manage.py  pyproject.toml
test/backend_django/: db.sqlite3  pyproject.toml
test/backend_django/backend_django/: asgi.py  settings.py  urls.py  wsgi.py
test/backend_django/lectures/: admin.py  models.py
test/backend_django/lectures/migrations/: 0001_initial.py
test/backend_django/users/: admin.py  models.py  urls.py  views.py
test/backend_django/users/migrations/: 0001_initial.py
testPj/test_1/: db.sqlite3  manage.py  pyproject.toml
testPj/test_1/shortner/: models.py
testPj/test_1/test_1/: asgi.py  settings.py  urls.py  wsgi.py
todo-django-backend/: .gitigonre  db.sqlite3
(+434 files in other folders)
