[tool.poetry]
name = "inse-django"
version = "0.1.0"
description = ""
authors = ["yesaroun <akor1@naver.com>"]
readme = "README.md"
packages = [{include = "inse_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
