[tool.poetry]
name = "in-flask-backend"
version = "0.1.0"
description = ""
authors = ["yesaroun <akor1@naver.com>"]
readme = "README.md"
packages = [{include = "in_flask_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
flask-mysql = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
